--- a/package.json
+++ b/package.json
@@ -17,11 +17,19 @@
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
+    "date-fns": "^2.30.0",
     "next": "13.4.10",
+    "next-transpile-modules": "^10.0.0",
     "postcss": "8.4.26",
     "react": "18.2.0",
+    "react-datepicker": "^4.16.0",
     "react-dom": "18.2.0",
+    "react-material-ui-carousel": "^3.4.2",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "@types/react-datepicker": "^4.11.2",
+    "@types/react-slick": "^0.23.10"
   }
 }
